# birds

./: .gitignore  Create_Distribution_w_Augmentations.ipynb  Download and Slice Samples.ipynb  README.md  config.cfg.Example  ensembletrain.py  environment.yml  nose2.cfg  setup.cfg  setup.py  sliding-window.py  test_utils.py  world_map.json.Example
data_augmentation/src/: CreateTrainValidation.py  WavSplitter.py  WavSpoofer.py  WavToSpectrogram.py  augmentations.py  create_dataset.sh  specaugment.py  utils.py
doc/: conf.py  conf.py~  index.rst
doc/source/: birdsong.ml_plotting.tests.rst  birdsong.rst  birdsong.tests.rst  birdsong.utils.tests.rst  data_augmentation.rst  result_analysis.rst
documentation/: 0.8.0
documentation/source/: conf.py  dataset_gen.rst  display.rst  download.rst  files.rst  index.rst  man_split.rst  manager.rst  nets.rst  requirements.txt  setup.rst  train&eval.rst  training.rst  wav_spoof.rst
src/: bird_dataloader.py  bird_dataset.py  birds_train_parallel.py  cross_validation_dataloader.py  display.py  download_from_metadata.py  ensembledisplay.py  ensembletrain.py  evaluations.py  manager.py  multi_root_image_dataset.py  nets.py  recording_download.py  result_tallying.py  rooted_image_dataset.py  samplers.py  torch.pypredef  training.py
src/bash_scripts/: README.txt  file_count.sh  save_run_results.sh  save_run_results.sh~  split_data.sh
src/birdcalls/: cross_validation_dataloader.py  launch_training.py  torch.pypredef~
src/birdflock/: binary_dataset.py  binary_run_inference.py  binary_run_inference_CPUs.sh  birds_train_binaries.py  inference_eval_summary.py  run_training.py  train_one_binary_classifier.py
src/birdsong/: birds_train_basic.py  birds_train_basic_CV.py  birds_train_parallel.py  class_weight_discovery.py  conv_matrix.py  cross_validation_dataloader.py  display.py  launch_birds_training.py  launch_multiprocessing_training_runs.py  launch_training.py  launch_training_runs.py  manager.py  match_snippets_to_selection_table.py  minimal_ddp.py  minimal_ddp_launcher.py  (+13 more)
(+329 files in other folders)
