[metadata]
name = birds
version = 0.1.0
author = Andreas Paepcke
author_email = paepcke@cs.stanford.edu
description = Identify birdsong episodes in spectrograms
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:paepcke/birds.git
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues

[options]

# Empty key in package_dir specifies root of packages;
# value is relative to proj root:

package_dir=
    = src

# Find the packages to include in distributions
# (that's different from the dependencies):
packages=find:

install_requires = 
                  statsmodels>=0.13
                  scikit-learn>=1.0
                  pandas>=1.4.0
                  numpy>=1.19.1           
                  torch>=1.11.0
                  torchvision>=0.12.0
                  seaborn>=0.11.0
                  requests>=2.24.0
                  torchaudio>=0.12
                  PyQt5>=5.15.2
                  matplotlib>=3.3.0
                  librosa>=0.8.0
                  scipy>=1.5.2
                  SoundFile>=0.10.3.post1
                  logging-singleton>=1.0
                  GPUtil>=1.4.0
                  tensorboard>=2.4.0
                  natsort>=7.1.0
                  Pillow>=8.0.1
                  orjson>=3.5.1
                  nose2>=0.9.2     # For testing
                  tensorflow-plot>=0.3.2
                  psutil>=5.8.0
                  adjustText>=0.7.3
                  discrete-differentiator>=0.1
                  scikit-image>=0.18.1
                  skorch>=0.10.0
                  ml-experiment-manager>=0.1.15
                  mplcursors>=0.5
                  #tabulate>=0.8.9
                  texttable>=1.6.4
                  #mtspec>=0.3.2
                  pyarrow>=8.0.0
                  noisereduce>=2.0.1
                  
python_requires = >=3.6

[options.extras_require]

test = nose2>=0.9.2
